# agtrk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml  ruff.yml
docs/prompt-decisions/: mid-conversation-registration-nudge.md  status-guidance.md  todo-selection-exception.md
src/agtrk/: __init__.py  cli.py  db.py  git.py  models.py  service.py  tui.py  tui_knowledge.py  version_check.py
src/claude_sessions/: __init__.py  cli.py  db.py  git.py  models.py  service.py  tui.py
tests/: conftest.py  test_cli.py  test_db.py  test_git.py  test_models.py  test_service.py  test_version_check.py
